--- a/css/style.css
+++ b/css/style.css
@@ -21,15 +21,15 @@
 
  .content{
   background-color: white;
-  width: 40vw;
-  height: 60vh;
+  width: 50vw;
+  height: 70vh;
   text-align:center;
   border-radius: 5px;
 }
 
 .log .content img{
   height: 60px;
-  margin-top: 50px;
+  margin-top: 90px;
   margin-bottom: 30px;
 }
 
@@ -58,7 +58,7 @@
   width: 80%;
 }
 
-.log .content button{
+ button{
   background-color:#00abbe;
   color: white;
   width: 50%;
@@ -96,6 +96,108 @@
 
 
 .game h2{
+  font-size: 15px;
   margin-top: 50px;
   margin-bottom: 30px;
+  color:#00abbe;
+}
+
+.game span{
+  font-size: 15px;
+  font-weight: bolder;
+  color:#063852;
+}
+
+.ico {
+  height: 40px;
+}
+
+hr{
+  border: 1px solid #063852;
+  margin: 20px auto;
+  width: 30%;
+}
+
+.row-dice{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+.me{
+  margin-left: 20px;
+}
+
+.computer{
+
+  margin-right: 20px;
+
+}
+
+.vs{
+  width: 7vw;
+  margin-top: 40px;
+
+
+}
+
+h1{
+  font-size: 40px;
+  font-weight: bold;
+  color:#00abbe;
+}
+
+
+h3{
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-size: 20px;
+  font-weight: normal;
+  color:#063852;
+}
+.riquadro{
+  border: 5px solid #063852;
+  border-radius: 5px;
+  width: 150px;
+  height: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.dado{
+  height: 100px;
+
+}
+
+.result-game{
+  display: inline-block;
+  font-size: 12px
+}
+.result-game h1{
+  font-style: italic;
+  font-size: 18px
+}
+
+.bg-green{
+  background-color: #6dff6d;
+}
+.bg-red{
+  background-color: #ff3f3f;
+}
+
+.red{
+  color: red;
+  font-weight: 600;
+}
+.green{
+  color: green;
+  font-weight: 600;
+}
+
+.normal{
+  color: #00abbe;
+  font-weight: 600;
 }
